<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="project.instachat.com.InstaShare.userActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/Logout"
        android:orderInCategory="100"
        android:title="@string/logout_label"
        app:showAsAction="never" />
    <item
        android:id="@+id/Edit_friends"
        android:orderInCategory="100"
        android:title="@string/Edit_friends"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_camera"
        android:title="@string/action_camera_label"
        android:icon="@drawable/ic_camera"
        app:showAsAction="always"/>

</menu>
