<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="project.instachat.com.InstaShare.login"

    >
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/refresh"
        android:orderInCategory="100"
        android:icon="@drawable/refresh"
        android:title="@string/reset_option"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/SignUp"
        android:orderInCategory="100"

        android:title="@string/signup_option"
        app:showAsAction="never"
        />


</menu>
